# OpenHydorah

./: .gitmodules  AUTHORS.md  CMakeLists.txt  LICENSE.md  README.md
openhydorah/: .gitignore  CMakeLists.txt  hydorah.hs
openhydorah/assets/data/: outwall  outwallenem
openhydorah/assets/entities/: asteroid_big.ent  eger.ent  player.ent  projectile.ent
openhydorah/assets/locales/: en.json
openhydorah/assets/maps/: test.map
openhydorah/assets/mods/hydorah/: compile-haskell.sh  hsbracket.c  hydorah.hs
openhydorah/assets/mods/hydorah/OpenHydorah/: Engine.hs  Entity.hs  Input.hs  OpenHydorah.hs  Scene.hs
openhydorah/assets/scenes/: keymap.set  test.scene
openhydorah/assets/sprites/: asteroid_big.spr  asteroid_small.spr  eger.spr  fshoot.spr  player.spr  test.spr
openhydorah/cmake/Modules/: FindSDL2.cmake  FindSDL2_image.cmake
openhydorah/docs/: Doxyfile
openhydorah/include/: actor.h  animation.h  cleanup.h  collision.h  dictionary.h  editor.h  engine.h  entity.h  filesystem.h  frame.h  globals.h  init.h  input.h  list.h  map.h  mod.h  object.h  property.h  refptr.h  scene.h  sprite.h  texture.h  unit.h  vector.h
openhydorah/src/: actor.c  animation.c  cleanup.c  collision.c  dictionary.c  editor.c  enemy.d  engine.c  entity.c  filesystem.c  frame.c  game.d  init.c  input.c  intro.d  list.c  main.c  main.d  main_menu.d  map.c  mod.c  object.c  player.d  projectile.d  property.c  refptr.c  scene.c  sprite.c  texture.c  vector.c  weapon.d
openhydorah/src/editor/: editor.c  event.c  render.c  selection.c
openhydorah/src/init/: init.c  initfs.c  initsdl.c
openhydorah/tests/: CMakeLists.txt  tests.h  tests_collision.c  tests_dictionary.c  tests_entity.c  tests_list.c  tests_main.c  tests_property.c  tests_refptr.c  tests_sprite.c  tests_texture.c
